--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/litterbox-sf-wdi-18/ajax-crud"
+    "url": "git+https://github.com/litterbox-sf-wdi-18/ajax-crud.git"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/litterbox-sf-wdi-18/ajax-crud",
   "dependencies": {
-    "body-parser": "^1.12.4",
-    "express": "^4.12.3",
+    "body-parser": "^1.13.3",
+    "bower": "^1.5.2",
+    "express": "^4.13.3",
+    "mongoose": "^4.1.3",
+    "nodemon": "^1.4.1",
     "underscore": "^1.8.3"
   }
 }
